--- a/_sass/minima/initialize.scss
+++ b/_sass/minima/initialize.scss
@@ -1,13 +1,13 @@
 @charset "utf-8";
 
 // Define defaults for each variable.
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Noto+Serif+SC:wght@300;400;500;600;700&family=Noto+Sans+SC&display=swap');
-$base-font-family: "Lora", "Merriweather", "Noto Sans Simplified Chinese", "Noto Serif SC", serif !default;
+@import url('https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&family=Merriweather:ital,opsz,wdth,wght@0,18..144,87..112,300..900;1,18..144,87..112,300..900&family=Noto+Sans+SC:wght@100..900&display=swap');
+$base-font-family: "Literata", "Merriweather", "Noto Sans Simplified Chinese", "Noto Serif SC", serif !default;
 $code-font-family: "Menlo", "Inconsolata", "Consolas", "Roboto Mono", "Ubuntu Mono", "Liberation Mono", "Courier New", monospace;
 $base-font-size:   16px !default;
-$base-font-weight: 400 !default;
+$base-font-weight: 350 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
-$base-line-height: 1.5 !default;
+$base-line-height: 1.4 !default;
 
 $spacing-unit:     25px !default;
 
